--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -14,7 +14,7 @@ serve(async (req) => {
 
     const supabaseUrl = Deno.env.get("https://tfbqqduxtsacvwfigsvt.supabase.co")!;
     const serviceKey = Deno.env.get("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc2NjY5MTg3NywiZXhwIjoyMDgyMjY3ODc3fQ.-b9qgIQNBwPy8meB07oRe4im7ACZU8NaAgydy3mSW74")!;
-    const resend = new Resend(Deno.env.get("RESEND_API_KEY")!);
+    const resend = new Resend(Deno.env.get("re_iJM1LN3J_Bo3mJXHmwKYTo7LURtYyXeFY")!);
 
     // 🔐 GENERUJ MAGIC LINK
     const res = await fetch(`${supabaseUrl}/auth/v1/magiclink`, {
