--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,57 +1,91 @@
-import { serve } from "https://deno.land/std@0.177.0/http/server.ts";
-import { Resend } from "npm:@resend/node";
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8">
+  <title>Logowanie OREP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-serve(async (req) => {
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+      padding: 40px;
+    }
+    .box {
+      max-width: 360px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      font-size: 16px;
+    }
+    button {
+      background: #2b6cb0;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .msg {
+      margin-top: 12px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+
+<div class="box">
+  <h3>Logowanie</h3>
+  <input type="email" id="email" placeholder="Email">
+  <button id="loginBtn">Wyślij link logowania</button>
+  <div class="msg" id="msg"></div>
+</div>
+
+<script>
+const btn = document.getElementById("loginBtn");
+const msg = document.getElementById("msg");
+
+btn.addEventListener("click", async () => {
+  const email = document.getElementById("email").value.trim();
+  msg.textContent = "";
+
+  if (!email) {
+    msg.textContent = "❌ Podaj email";
+    return;
+  }
+
+  btn.disabled = true;
+  btn.textContent = "Wysyłanie...";
+
   try {
-    if (req.method !== "POST") {
-      return new Response("Method not allowed", { status: 405 });
-    }
+    const res = await fetch(
+      "https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-otp",
+      {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          email,
+          redirectTo: "https://orep.pl/wyszukiwarka"
+        })
+      }
+    );
 
-    const { email, redirectTo } = await req.json();
-    if (!email || !redirectTo) {
-      return new Response("Missing email", { status: 400 });
-    }
+    if (!res.ok) throw new Error("Błąd serwera");
 
-    const supabaseUrl = Deno.env.get("https://tfbqqduxtsacvwfigsvt.supabase.co")!;
-    const serviceKey = Deno.env.get("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc2NjY5MTg3NywiZXhwIjoyMDgyMjY3ODc3fQ.-b9qgIQNBwPy8meB07oRe4im7ACZU8NaAgydy3mSW74")!;
-    const resend = new Resend(Deno.env.get("re_iJM1LN3J_Bo3mJXHmwKYTo7LURtYyXeFY")!);
-
-    // 🔐 GENERUJ MAGIC LINK
-    const res = await fetch(`${supabaseUrl}/auth/v1/magiclink`, {
-      method: "POST",
-      headers: {
-        "apikey": serviceKey,
-        "Authorization": `Bearer ${serviceKey}`,
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify({
-        email,
-        redirect_to: redirectTo,
-      }),
-    });
-
-    const data = await res.json();
-    if (!data?.action_link) {
-      console.error("Supabase auth error:", data);
-      return new Response("Auth error", { status: 500 });
-    }
-
-    // ✉️ EMAIL PRZEZ RESEND
-    await resend.emails.send({
-      from: "OREP <noreply@orep.pl>",
-      to: email,
-      subject: "Zaloguj się do OREP",
-      html: `
-        <h3>Logowanie OREP</h3>
-        <p>Kliknij link:</p>
-        <a href="${data.action_link}">Zaloguj się</a>
-        <p>Link ważny 60 minut</p>
-      `,
-    });
-
-    return new Response("OK");
+    msg.textContent = "✅ Sprawdź email (link logowania)";
   } catch (e) {
-    console.error("❌ ERROR", e);
-    return new Response("Server error", { status: 500 });
+    msg.textContent = "❌ Nie udało się wysłać emaila";
+  } finally {
+    btn.disabled = false;
+    btn.textContent = "Wyślij link logowania";
   }
 });
+</script>
+
+</body>
+</html>
