--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,91 +1,122 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <title>Logowanie OREP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logowanie – OREP</title>
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      padding: 40px;
-    }
-    .box {
-      max-width: 360px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-    }
-    input, button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      font-size: 16px;
-    }
-    button {
-      background: #2b6cb0;
-      color: white;
-      border: none;
+    body { font-family: Arial, sans-serif; padding: 40px; }
+    button { padding: 12px; width: 100%; margin: 6px 0; font-size: 16px; cursor: pointer; }
+    .email { background: #555; color: white; border: none; }
+    .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); justify-content: center; align-items: center; }
+    .box { background: white; padding: 20px; width: 300px; border-radius: 8px; text-align: center; }
+    input { width: 100%; padding: 10px; margin-bottom: 8px; font-size: 16px; }
+
+    .avatar-btn {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      background: #888;
+      color: #fff;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
       cursor: pointer;
+      border: none;
     }
-    .msg {
-      margin-top: 12px;
-      font-size: 14px;
-    }
+    .avatar-container { display: flex; gap: 12px; align-items: center; }
   </style>
 </head>
 
 <body>
 
-<div class="box">
-  <h3>Logowanie</h3>
-  <input type="email" id="email" placeholder="Email">
-  <button id="loginBtn">Wyślij link logowania</button>
-  <div class="msg" id="msg"></div>
+<div class="avatar-container">
+  <button id="avatarBtn" class="avatar-btn">👤</button>
+</div>
+
+<div class="modal" id="loginModal">
+  <div class="box">
+    <h3>Logowanie</h3>
+    <input type="email" id="emailInput" placeholder="Email" />
+    <button class="email" id="emailBtn">Zaloguj e-mailem</button>
+    <button id="closeLogin">Zamknij</button>
+  </div>
 </div>
 
 <script>
-const btn = document.getElementById("loginBtn");
-const msg = document.getElementById("msg");
+document.addEventListener("DOMContentLoaded", () => {
 
-btn.addEventListener("click", async () => {
-  const email = document.getElementById("email").value.trim();
-  msg.textContent = "";
+  // 🔹 SUPABASE
+  const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
 
-  if (!email) {
-    msg.textContent = "❌ Podaj email";
-    return;
-  }
+  // 🔹 ELEMENTY UI
+  const avatarBtn = document.getElementById("avatarBtn");
+  const modal = document.getElementById("loginModal");
+  const closeLogin = document.getElementById("closeLogin");
+  const emailBtn = document.getElementById("emailBtn");
+  const emailInput = document.getElementById("emailInput");
 
-  btn.disabled = true;
-  btn.textContent = "Wysyłanie...";
+  avatarBtn.onclick = () => {
+    modal.style.display = "flex";
+    emailInput.focus();
+  };
 
-  try {
-    const res = await fetch(
-      "https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-otp",
-      {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          email,
-          redirectTo: "https://orep.pl/wyszukiwarka"
-        })
+  closeLogin.onclick = () => {
+    modal.style.display = "none";
+  };
+
+  modal.onclick = (e) => {
+    if (e.target === modal) modal.style.display = "none";
+  };
+
+  // 🔐 WYSYŁKA EMAILA PRZEZ EDGE FUNCTION
+  emailBtn.onclick = async () => {
+    const email = emailInput.value.trim();
+    if (!email) {
+      alert("Podaj email");
+      return;
+    }
+
+    console.log("➡️ Wysyłam email do:", email);
+
+    try {
+      const res = await fetch(
+        `${SUPABASE_URL}/functions/v1/send-otp`,
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "apikey": SUPABASE_ANON_KEY
+          },
+          body: JSON.stringify({
+            email: email,
+            redirectTo: "https://orep.pl/wyszukiwarka"
+          })
+        }
+      );
+
+      if (!res.ok) {
+        const txt = await res.text();
+        throw new Error(txt);
       }
-    );
 
-    if (!res.ok) throw new Error("Błąd serwera");
+      const data = await res.json();
+      console.log("✅ OK:", data);
 
-    msg.textContent = "✅ Sprawdź email (link logowania)";
-  } catch (e) {
-    msg.textContent = "❌ Nie udało się wysłać emaila";
-  } finally {
-    btn.disabled = false;
-    btn.textContent = "Wyślij link logowania";
-  }
+      alert("📧 Email wysłany – sprawdź skrzynkę (SPAM też)");
+      modal.style.display = "none";
+
+    } catch (err) {
+      console.error("❌ Błąd:", err);
+      alert("❌ Nie udało się wysłać emaila");
+    }
+  };
 });
 </script>
 
 </body>
 </html>
+
