--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -89,12 +89,12 @@ emailBtn.addEventListener('click', async () => {
   console.log("➡️ Wysyłam email do:", email)
 
   try {
-    const response = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-otp', {
+    const response = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/smooth-processor', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ email })
     })
-    if (!response.ok) throw new Error('Błąd wysyłki OTP: ' + response.status)
+    if (!response.ok) throw new Error('Błąd wysyłki EAGE FUNTCIONS: ' + response.status)
     alert('Sprawdź swój email (link logowania)')
   } catch(err) {
     console.error('❌ Błąd:', err)
