--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -89,7 +89,7 @@ emailBtn.addEventListener('click', async () => {
   console.log("➡️ Wysyłam email do:", email)
 
   try {
-    const response = await fetch('https://https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/smooth-processor', {
+    const response = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/smooth-processor', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ email })
