--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -4,108 +4,144 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Logowanie – Supabase</title>
+
   <style>
-    body { font-family: Arial, sans-serif; padding: 40px; }
-    button { padding: 12px; width: 100%; margin: 6px 0; font-size: 16px; cursor: pointer; }
-    .email { background: #555; color: white; border: none; }
-    .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); justify-content: center; align-items: center; }
-    .box { background: white; padding: 20px; width: 300px; border-radius: 8px; text-align: center; }
-    input { width: 100%; padding: 10px; margin-bottom: 8px; font-size: 16px; }
-    .avatar-btn { width: 48px; height: 48px; border-radius: 50%; background: #888; color: #fff; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; cursor: pointer; border: none; }
-    .avatar-btn.logged-in { background: #2b6cb0; }
-    .avatar-container { display: flex; gap: 12px; align-items: center; }
-    .username-label { font-size: 14px; color: #333; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+    }
+
+    .avatar-btn {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      background: #888;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      font-size: 20px;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .box {
+      background: #fff;
+      padding: 20px;
+      width: 320px;
+      border-radius: 8px;
+      text-align: center;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .email {
+      background: #555;
+      color: white;
+      border: none;
+    }
   </style>
 </head>
+
 <body>
 
-<div class="avatar-container">
-  <button id="avatarBtn" class="avatar-btn">👤</button>
-  <div id="userLabel" class="username-label" aria-live="polite"></div>
-</div>
+<button id="avatarBtn" class="avatar-btn" type="button">👤</button>
 
 <div class="modal" id="loginModal">
   <div class="box">
     <h3>Logowanie</h3>
-    <input type="email" id="emailInput" placeholder="Email" />
-    <button class="email" id="emailBtn">Wyślij link logowania</button>
-    <button id="logoutBtn" style="display:none; background:#c53030; color:#fff;">Wyloguj</button>
+
+    <input
+      type="email"
+      id="emailInput"
+      placeholder="Email"
+      autocomplete="email"
+    />
+
+    <button id="emailBtn" class="email">Zaloguj e-mailem</button>
     <button id="closeLogin">Zamknij</button>
   </div>
 </div>
 
+<!-- ✅ JEDYNY SCRIPT – JAKO MODULE -->
 <script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+  import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-// ===== KONFIGURACJA =====
-const SUPABASE_URL = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
-const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+  console.log("✅ JS załadowany");
 
-const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
+  // ===== SUPABASE CONFIG =====
+  const SUPABASE_URL="https://https://tfbqqduxtsacvwfigsvt.supabase.co";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
 
-// ===== ELEMENTY UI =====
-const avatarBtn = document.getElementById('avatarBtn')
-const userLabel = document.getElementById('userLabel')
-const modal = document.getElementById('loginModal')
-const emailInput = document.getElementById('emailInput')
-const emailBtn = document.getElementById('emailBtn')
-const logoutBtn = document.getElementById('logoutBtn')
-const closeLogin = document.getElementById('closeLogin')
+  const supabase = createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
-// ===== FUNKCJE =====
-function setAvatar(email) {
-  if (!email) {
-    avatarBtn.textContent = '👤'
-    avatarBtn.classList.remove('logged-in')
-    userLabel.textContent = ''
-    logoutBtn.style.display = 'none'
-  } else {
-    const initials = email.split('@')[0].slice(0,2).toUpperCase()
-    avatarBtn.textContent = initials
-    avatarBtn.classList.add('logged-in')
-    userLabel.textContent = email
-    logoutBtn.style.display = 'inline-block'
-  }
-}
+  // ===== ELEMENTY UI =====
+  const avatarBtn = document.getElementById("avatarBtn");
+  const modal = document.getElementById("loginModal");
+  const closeLogin = document.getElementById("closeLogin");
+  const emailBtn = document.getElementById("emailBtn");
+  const emailInput = document.getElementById("emailInput");
 
-// ===== OBSŁUGA MODALA =====
-avatarBtn.addEventListener('click', () => modal.style.display='flex')
-closeLogin.addEventListener('click', () => modal.style.display='none')
-modal.addEventListener('click', e => { if(e.target === modal) modal.style.display='none' })
+  // ===== OTWIERANIE MODALA =====
+  avatarBtn.addEventListener("click", () => {
+    modal.style.display = "flex";
+  });
 
-// ===== WYLOGOWANIE =====
-logoutBtn.addEventListener('click', async () => {
-  await supabase.auth.signOut()
-  setAvatar(null)
-  modal.style.display = 'none'
-  alert('Wylogowano')
-})
+  closeLogin.addEventListener("click", () => {
+    modal.style.display = "none";
+  });
 
-// ===== WYŚLIJ OTP =====
-emailBtn.addEventListener('click', async () => {
-  const email = emailInput.value.trim()
-  if (!email) return alert('Podaj email')
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) modal.style.display = "none";
+  });
 
-  console.log("➡️ Wysyłam email do:", email)
+  // ===== LOGOWANIE EMAIL OTP =====
+  emailBtn.addEventListener("click", async () => {
+    const email = emailInput.value.trim();
 
-  try {
-    const response = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/smooth-processor', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email })
-    })
-    if (!response.ok) throw new Error('Błąd wysyłki EAGE FUNTCIONS: ' + response.status)
-    alert('Sprawdź swój email (link logowania)')
-  } catch(err) {
-    console.error('❌ Błąd:', err)
-    alert('Wystąpił błąd, sprawdź konsolę')
-  }
-})
+    if (!email) {
+      alert("Podaj email");
+      return;
+    }
 
-// ===== SPRAWDZENIE SESJI =====
-supabase.auth.getSession().then(({ data }) => {
-  setAvatar(data.session?.user?.email)
-})
+    console.log("➡️ Wysyłam OTP do:", email);
+
+    const { error } = await supabase.auth.signInWithOtp({
+      email,
+      options: {
+        emailRedirectTo:"https://orep.pl/wyszukiwarka"
+      }
+    });
+
+    if (error) {
+      console.error("❌ Błąd Supabase:", error);
+      alert("Błąd: " + error.message);
+    } else {
+      alert("📧 Sprawdź email (link logowania)");
+      modal.style.display = "none";
+    }
+  });
 </script>
 
 </body>
