--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -2,80 +2,104 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Logowanie – Supabase</title>
+  <title>Wysyłanie emaila</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
-    body { font-family: Arial, sans-serif; padding: 40px; }
-    .avatar-btn { width: 48px; height: 48px; border-radius: 50%; background: #888; color: #fff; font-weight: bold; border: none; cursor: pointer; font-size: 20px; }
-    .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); justify-content: center; align-items: center; z-index: 9999; }
-    .box { background: #fff; padding: 20px; width: 320px; border-radius: 8px; text-align: center; }
-    input { width: 100%; padding: 10px; margin-bottom: 10px; font-size: 16px; }
-    button { width: 100%; padding: 12px; margin-top: 6px; font-size: 16px; cursor: pointer; }
-    .email { background: #555; color: white; border: none; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+      padding: 40px;
+    }
+    .box {
+      max-width: 400px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      font-size: 16px;
+    }
+    button {
+      background: #2e7d32;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      opacity: 0.9;
+    }
+    .log {
+      margin-top: 15px;
+      font-size: 14px;
+    }
   </style>
 </head>
+
 <body>
 
-<button id="avatarBtn" class="avatar-btn" type="button">👤</button>
-
-<div class="modal" id="loginModal">
   <div class="box">
-    <h3>Logowanie</h3>
-    <input type="email" id="emailInput" placeholder="Email" autocomplete="email"/>
-    <button id="emailBtn" class="email">Zaloguj e-mailem</button>
-    <button id="closeLogin">Zamknij</button>
+    <h3>Wyślij email</h3>
+
+    <input
+      type="email"
+      id="email"
+      placeholder="Wpisz email"
+      required
+    />
+
+    <button id="sendBtn">Wyślij</button>
+
+    <div class="log" id="log"></div>
   </div>
-</div>
 
-<script type="module">
-import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+  <script>
+    const btn = document.getElementById("sendBtn");
+    const log = document.getElementById("log");
 
-console.log("✅ JS załadowany");
+    btn.addEventListener("click", async () => {
+      const email = document.getElementById("email").value.trim();
 
-// ===== SUPABASE CONFIG =====
-const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co"; // poprawione
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
+      if (!email) {
+        log.innerText = "❌ Podaj email";
+        return;
+      }
 
-const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+      log.innerText = "⏳ Wysyłam email...";
 
-// ===== ELEMENTY UI =====
-const avatarBtn = document.getElementById("avatarBtn");
-const modal = document.getElementById("loginModal");
-const closeLogin = document.getElementById("closeLogin");
-const emailBtn = document.getElementById("emailBtn");
-const emailInput = document.getElementById("emailInput");
+      try {
+        const res = await fetch(
+          "https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-otp",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ email })
+          }
+        );
 
-// ===== OTWIERANIE MODALA =====
-avatarBtn.addEventListener("click", () => { modal.style.display = "flex"; });
-closeLogin.addEventListener("click", () => { modal.style.display = "none"; });
-modal.addEventListener("click", e => { if(e.target === modal) modal.style.display = "none"; });
+        const data = await res.json();
 
-// ===== LOGOWANIE EMAIL OTP =====
-emailBtn.addEventListener("click", async () => {
-  const email = emailInput.value.trim();
-  if (!email) return alert("Podaj email");
+        if (!res.ok) {
+          console.error(data);
+          log.innerText = "❌ Błąd: " + (data.error || res.status);
+          return;
+        }
 
-  console.log("➡️ Wysyłam OTP do:", email);
+        log.innerText = "✅ Email wysłany poprawnie!";
+        console.log("OK:", data);
 
-  try {
-    const { error } = await supabase.auth.signInWithOtp({
-      email,
-      options: { emailRedirectTo: "https://orep.pl/wyszukiwarka" }
+      } catch (err) {
+        console.error(err);
+        log.innerText = "❌ Błąd połączenia";
+      }
     });
-
-    if (error) {
-      console.error("❌ Błąd Supabase:", error);
-      alert("Błąd: " + error.message);
-    } else {
-      alert("📧 Sprawdź email (link logowania)");
-      modal.style.display = "none";
-    }
-  } catch(err) {
-    console.error("❌ Błąd:", err);
-    alert("Wystąpił nieoczekiwany błąd, sprawdź konsolę");
-  }
-});
-</script>
+  </script>
 
 </body>
 </html>
